{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 70,
  "lineage": "e0425763-4152-6e0d-70f7-1f0acbd8848b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "classic-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:159415703522:loadbalancer/classic-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 100,
            "cross_zone_load_balancing": true,
            "dns_name": "classic-elb-1028971982.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "classic-elb",
            "idle_timeout": 100,
            "instances": [
              "i-021c104b602ec2c82",
              "i-0fd0bfc499093f787"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "classic-elb",
            "security_groups": [
              "sg-0a40c9ba3983ff30b"
            ],
            "source_security_group": "159415703522/mysg",
            "source_security_group_id": "sg-0a40c9ba3983ff30b",
            "subnets": [
              "subnet-036db6cbd901ddb71",
              "subnet-057b3ea49bbbba532",
              "subnet-0d0915c3b5e95a14c"
            ],
            "tags": {
              "Name": "Classic-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.mysg",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "classic-elb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:159415703522:loadbalancer/classic-elb2",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 100,
            "cross_zone_load_balancing": true,
            "dns_name": "classic-elb2-933774939.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "classic-elb2",
            "idle_timeout": 100,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "classic-elb2",
            "security_groups": [
              "sg-0a40c9ba3983ff30b"
            ],
            "source_security_group": "159415703522/mysg",
            "source_security_group_id": "sg-0a40c9ba3983ff30b",
            "subnets": [
              "subnet-036db6cbd901ddb71",
              "subnet-057b3ea49bbbba532",
              "subnet-0d0915c3b5e95a14c"
            ],
            "tags": {
              "Name": "Classic-elb2"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.pubsub",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f052119b3c7e61d1",
            "arn": "arn:aws:ec2:us-east-2:159415703522:instance/i-02e31c012c54dd317",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e31c012c54dd317",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03cac0d2b99295301",
            "private_dns": "ip-192-168-169-210.us-east-2.compute.internal",
            "private_ip": "192.168.169.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8c1c90d48f124e7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05eb4343d96be801a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e6b769bfbf5c611",
            "tags": {
              "Name": "dbserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05eb4343d96be801a"
            ]
          },
          "dependencies": [
            "aws_security_group.privsg",
            "aws_subnet.privsub",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:159415703522:instance/i-021c104b602ec2c82",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021c104b602ec2c82",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f8f421b1883f125",
            "private_dns": "ip-192-168-0-225.us-east-2.compute.internal",
            "private_ip": "192.168.0.225",
            "public_dns": "ec2-3-137-170-2.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.170.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c00c072f3324c877",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a40c9ba3983ff30b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057b3ea49bbbba532",
            "tags": {
              "Name": "webser-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a40c9ba3983ff30b"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:159415703522:instance/i-0fd0bfc499093f787",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd0bfc499093f787",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e6746ae1f62f5120",
            "private_dns": "ip-192-168-21-210.us-east-2.compute.internal",
            "private_ip": "192.168.21.210",
            "public_dns": "ec2-3-128-29-247.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.29.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7de691e91b7bcc5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a40c9ba3983ff30b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0915c3b5e95a14c",
            "tags": {
              "Name": "webser-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a40c9ba3983ff30b"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09246ddb00c7c4fef",
            "arn": "arn:aws:ec2:us-east-2:159415703522:instance/i-03ed060f230846673",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ed060f230846673",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff3ffbef0d44dcf6",
            "private_dns": "ip-192-168-3-179.us-east-2.compute.internal",
            "private_ip": "192.168.3.179",
            "public_dns": "ec2-18-224-55-45.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.55.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b38072505ea4ba39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a40c9ba3983ff30b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057b3ea49bbbba532",
            "tags": {
              "Name": "webser-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a40c9ba3983ff30b"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pub-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:internet-gateway/igw-08e3198485a31befe",
            "id": "igw-08e3198485a31befe",
            "owner_id": "159415703522",
            "tags": {
              "Name": "pub-igw"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-021cd862a6ae838ba",
            "owner_id": "159415703522",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e3198485a31befe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pub-igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a0e6ee0a0e0adab",
            "route_table_id": "rtb-021cd862a6ae838ba",
            "subnet_id": "subnet-057b3ea49bbbba532"
          },
          "dependencies": [
            "aws_internet_gateway.pub-igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pubsub",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c734d92c48b8ee83",
            "route_table_id": "rtb-021cd862a6ae838ba",
            "subnet_id": "subnet-0d0915c3b5e95a14c"
          },
          "dependencies": [
            "aws_internet_gateway.pub-igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pubsub",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ecb4e4000bb04e",
            "route_table_id": "rtb-021cd862a6ae838ba",
            "subnet_id": "subnet-036db6cbd901ddb71"
          },
          "dependencies": [
            "aws_internet_gateway.pub-igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pubsub",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:security-group/sg-0a40c9ba3983ff30b",
            "description": "Allow  inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a40c9ba3983ff30b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysg",
            "name_prefix": "",
            "owner_id": "159415703522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:security-group/sg-05eb4343d96be801a",
            "description": "Allow  outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05eb4343d96be801a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "privsg",
            "name_prefix": "",
            "owner_id": "159415703522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "privsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:subnet/subnet-01e6b769bfbf5c611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.160.0/20",
            "id": "subnet-01e6b769bfbf5c611",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "privsub-0"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:subnet/subnet-09d78fa8eab390634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.176.0/20",
            "id": "subnet-09d78fa8eab390634",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "privsub-1"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:subnet/subnet-057b3ea49bbbba532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/20",
            "id": "subnet-057b3ea49bbbba532",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159415703522",
            "tags": {
              "Name": "pubsub-0"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:subnet/subnet-0d0915c3b5e95a14c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.16.0/20",
            "id": "subnet-0d0915c3b5e95a14c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159415703522",
            "tags": {
              "Name": "pubsub-1"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:subnet/subnet-036db6cbd901ddb71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.32.0/20",
            "id": "subnet-036db6cbd901ddb71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159415703522",
            "tags": {
              "Name": "pubsub-2"
            },
            "vpc_id": "vpc-0c59c30b6426e6e24"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159415703522:vpc/vpc-0c59c30b6426e6e24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00880fbef95c047e9",
            "default_route_table_id": "rtb-04ed8674bda974f96",
            "default_security_group_id": "sg-0a33977077c04bebe",
            "dhcp_options_id": "dopt-da7ee4b1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c59c30b6426e6e24",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04ed8674bda974f96",
            "owner_id": "159415703522",
            "tags": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}